test/cgip/PP/error/inheritance/rep/reperr-25.err105
"Line 53 column 15
230: Name unknown"
